--- a/DotnetRuntimeBootstrapper/DotnetRuntimeBootstrapper.csproj
+++ b/DotnetRuntimeBootstrapper/DotnetRuntimeBootstrapper.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net472</TargetFrameworks>
@@ -86,6 +86,7 @@
     <PackageReference Include="Microsoft.Build.Utilities.Core" Version="16.11.0" PrivateAssets="all" />
     <PackageReference Include="Mono.Cecil" Version="0.11.4" PrivateAssets="all" GeneratePathProperty="true" />
     <PackageReference Include="Ressy" Version="1.0.0" PrivateAssets="all" GeneratePathProperty="true" />
+    <PackageReference Include="System.Text.Json" Version="6.0.1" />
   </ItemGroup>
 
   <!-- Non-linking dependency on the bootstrapper executable project (to ensure correct build order) -->
