--- a/DotnetRuntimeBootstrapper/DotnetRuntimeBootstrapper.Local.props
+++ b/DotnetRuntimeBootstrapper/DotnetRuntimeBootstrapper.Local.props
@@ -1,12 +1,11 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0" TreatAsLocalProperty="TaskAssembly">
 
-  <!-- Props for local testing, used in the demo project -->
+  <Import Project="DotnetRuntimeBootstrapper.props" />
 
+  <!-- Props for local testing, used in the demo projects -->
   <PropertyGroup>
     <TaskAssembly Condition="'$(MSBuildRuntimeType)' == 'Core'">$(MSBuildThisFileDirectory)/bin/$(Configuration)/netstandard2.0/DotnetRuntimeBootstrapper.dll</TaskAssembly>
     <TaskAssembly Condition="'$(MSBuildRuntimeType)' != 'Core'">$(MSBuildThisFileDirectory)/bin/$(Configuration)/net472/DotnetRuntimeBootstrapper.dll</TaskAssembly>
   </PropertyGroup>
-
-  <UsingTask TaskName="DotnetRuntimeBootstrapper.CreateBootstrapperTask" AssemblyFile="$(TaskAssembly)" />
 
 </Project>
