--- a/DotnetRuntimeBootstrapper/DotnetRuntimeBootstrapper.targets
+++ b/DotnetRuntimeBootstrapper/DotnetRuntimeBootstrapper.targets
@@ -2,25 +2,40 @@
 
   <Target Name="CheckBootstrapperPrerequisites" BeforeTargets="CreateBootstrapperAfterBuild;CreateBootstrapperAfterPublish">
     <!-- Warning: not .NET Core -->
-    <Warning Code="DRB_NOT_NETCORE" Text="Project is not targeting .NET Core. Bootstrapper will not be created." Condition="'$(TargetFrameworkIdentifier)' != '.NETCoreApp'" />
-
-    <!-- Warning: not Windows executable -->
-    <Warning Code="DRB_NOT_WINEXE" Text="Project output type is not WinExe. Boostrapper will not be created." Condition="'$(OutputType)' != 'WinExe'" />
+    <Warning
+      Code="DRB_NOT_NETCORE"
+      Text="Project is not targeting .NET Core. Bootstrapper will not be created."
+      Condition="'$(TargetFrameworkIdentifier)' != '.NETCoreApp'" />
 
     <!-- Warning: not Windows target platform -->
-    <Warning Code="DRB_NOT_WINDOWS" Text="Target platform is not Windows. Boostrapper will not be created." Condition="'$(TargetPlatformIdentifier)' != 'Windows'" />
+    <Warning
+      Code="DRB_NOT_WINDOWS"
+      Text="Target platform is not Windows. Boostrapper will not be created."
+      Condition="'$(TargetPlatformIdentifier)' != 'Windows'" />
+
+    <!-- Warning: bootstrapper variant not specified nor inferred -->
+    <Warning
+      Code="DRB_UNKNOWN_VARIANT"
+      Text="Bootstrapper variant was not specified and could not be inferred. Bootstrapper will not be created."
+      Condition="'$(BootstrapperVariant)' == ''" />
   </Target>
 
-  <Target Name="CreateBootstrapperAfterBuild"
-          AfterTargets="Build"
-          Condition="$(GenerateBootstrapperOnBuild) == true AND '$(TargetFrameworkIdentifier)' == '.NETCoreApp' AND '$(OutputType)' == 'WinExe' AND '$(TargetPlatformIdentifier)' == 'Windows'">
-    <CreateBootstrapperTask TargetFilePath="$(TargetPath)" />
+  <Target
+    Name="CreateBootstrapperAfterBuild"
+    AfterTargets="Build"
+    Condition="$(GenerateBootstrapperOnBuild) == true AND '$(BootstrapperVariant)' != '' AND '$(TargetFrameworkIdentifier)' == '.NETCoreApp' AND '$(TargetPlatformIdentifier)' == 'Windows'">
+    <BootstrapperTask
+      Variant="$(BootstrapperVariant)"
+      TargetFilePath="$(TargetPath)" />
   </Target>
 
-  <Target Name="CreateBootstrapperAfterPublish"
-          AfterTargets="Publish"
-          Condition="'$(TargetFrameworkIdentifier)' == '.NETCoreApp' AND '$(OutputType)' == 'WinExe' AND '$(TargetPlatformIdentifier)' == 'Windows'">
-    <CreateBootstrapperTask TargetFilePath="$([System.IO.Path]::Combine('$(ProjectDir)', '$(PublishDir)/$(AssemblyName).dll'))" />
+  <Target
+    Name="CreateBootstrapperAfterPublish"
+    AfterTargets="Publish"
+    Condition="'$(BootstrapperVariant)' != '' AND '$(TargetFrameworkIdentifier)' == '.NETCoreApp' AND '$(TargetPlatformIdentifier)' == 'Windows'">
+    <BootstrapperTask
+      Variant="$(BootstrapperVariant)"
+      TargetFilePath="$([System.IO.Path]::Combine('$(ProjectDir)', '$(PublishDir)/$(AssemblyName).dll'))" />
   </Target>
 
 </Project>
