--- a/DotnetRuntimeBootstrapper/DotnetRuntimeBootstrapper.props
+++ b/DotnetRuntimeBootstrapper/DotnetRuntimeBootstrapper.props
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <GenerateBootstrapperOnBuild Condition="'$(GenerateBootstrapperOnBuild)' == ''">false</GenerateBootstrapperOnBuild>
-    <BootstrapperVariant Condition="'$(BootstrapperVariant)' == '' AND '$(OutputType)' == 'Exe'">Console</BootstrapperVariant>
-    <BootstrapperVariant Condition="'$(BootstrapperVariant)' == '' AND '$(OutputType)' == 'WinExe'">Desktop</BootstrapperVariant>
+    <BootstrapperVariant Condition="'$(BootstrapperVariant)' == '' AND '$(OutputType)' == 'Exe'">CLI</BootstrapperVariant>
+    <BootstrapperVariant Condition="'$(BootstrapperVariant)' == '' AND '$(OutputType)' == 'WinExe'">GUI</BootstrapperVariant>
   </PropertyGroup>
 
   <PropertyGroup>
