--- a/DotnetRuntimeBootstrapper/DotnetRuntimeBootstrapper.props
+++ b/DotnetRuntimeBootstrapper/DotnetRuntimeBootstrapper.props
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <GenerateBootstrapperOnBuild Condition="'$(GenerateBootstrapperOnBuild)' == ''">false</GenerateBootstrapperOnBuild>
-    <BootstrapperVariant Condition="'$(BootstrapperVariant)' == '' AND '$(OutputType)' == 'Exe'">CLI</BootstrapperVariant>
+    <BootstrapperVariant Condition="'$(BootstrapperVariant)' == '' AND '$(OutputType)' != 'WinExe'">CLI</BootstrapperVariant>
     <BootstrapperVariant Condition="'$(BootstrapperVariant)' == '' AND '$(OutputType)' == 'WinExe'">GUI</BootstrapperVariant>
   </PropertyGroup>
 
